# ttnn-op-generator

./: README.md  build_api_database.py  debug_db.py  generate_context.py  generate_from_context.py  include_api_database.json  include_api_database.txt  logging_demo.py  op_generator.py  persistent_prompt_refiner.py  prompts.py  requirements.txt  run_workflow.py  run_workflow_from_config.py  test_debugger.py  tools.py  tree_sitter_editor.py  tree_sitter_test.py  workflow.py
agents/: multi_stage_generator.py  multi_stage_prompt_generator.py  ttnn_agent.py  ttnn_agent_config.py
config/: config_parser.py  config_workflow_builder.py
configs/: eltwise_multiply.yaml
core/: __init__.py  epic_to_workflow_adapter.py  epic_workflow_runner.py  execution_logger.py  graph_nodes.py  node_types.py  workflow_graph.py
exp_debug_loop/: debug_loop.py
front_end/: front_end_parser.py
graphs/: custom_graphs.py  default_graphs.py
output/eltwise_multiply_custom/: CMakeLists.txt  eltwise_multiply_custom.cpp  eltwise_multiply_custom.hpp  eltwise_multiply_custom_pybind.cpp  eltwise_multiply_custom_pybind.hpp
output/eltwise_multiply_custom/device/: eltwise_multiply_custom_op.cpp  eltwise_multiply_custom_op.hpp  eltwise_multiply_custom_program_factory.cpp  eltwise_multiply_custom_program_factory.hpp
output/eltwise_multiply_custom/device/kernels/compute/: eltwise_multiply_custom_compute.cpp
output/eltwise_multiply_custom/device/kernels/dataflow/: eltwise_multiply_custom_reader.cpp  eltwise_multiply_custom_writer.cpp
tools/: api_extractor.py  database_query_tool.py  include_tool.py  (+3 more)
(+26 files in other folders)
